public/assets/css/students.css
.content{
    padding: 10px;
    display: inline-block;
}
.student-image{
    width: 180px;
    border-radius: 10px;
}
.market-name{
    color: white;
    font-weight: 300;
}
.info{
    width: 40%;
}
.markets{
    width: 60%;
    padding-left: 30px;
}
.first{
    margin-top: 0;
    padding-top: 0;
}
#student-name{
    color: antiquewhite;
    font-weight: 200;
}
#student-bio{
    color: antiquewhite;
    font-weight: 300;
}
.col-xs-3{
    padding-left: 0;
}
.btns{
    width: 40%;
}
.student-body{
    width: 60%;
    margin: 0 auto;
    background-color: #1e1e1e;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
    padding: 5px;
}

